# MetaRay

./: .clang-format  .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE  README.md  test.ppm  tips.txt
include/MPM/: mpm_defs.h  mpm_sim.h  mpm_utils.h
include/MTR/: core.h  math_defs.h  mesh.h  rasterizer.hpp  shader.h  shader.hpp  texture2D.h  texture3D.h
include/MTR/softras/: render.h  render.hpp  shader.h  shader.hpp
src/: main.cpp
src/GUI/: app.cpp  shader.h
src/MPM/: CMakeLists.txt  main.cpp  mpm_defs.cpp  mpm_sim.cpp  mpm_utils.cpp
src/MTR/: CMakeLists.txt  core.h  math_defs.cpp  math_defs.hpp  mesh.h  rasterizer.hpp  shader.cpp  shader.hpp  test.cpp
src/MTR/softras/: render.cpp  shader.cpp
src/examples/: CMakeLists.txt  code_test.cpp  rotate_box.cpp  triangle_test.cpp
src/shaders/: quad.vs
